# SalesMailerV1

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: brands.py  campaigns.py  features.py  leads.py  templates.py
app/services/: email_renderer.py  gmail_client.py  openai_client.py
app/static/: app.js  styles.css
app/templates/: base.html  index.html
docs/: app.js  index.html  styles.css
