[project]
name = "salesmailer"
version = "0.1.0"
description = "Portal to manage confirmation emails for leads"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.120.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
